--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  tests:
 
     runs-on: ubuntu-latest
 
@@ -23,4 +23,4 @@ jobs:
         pip install pytest dict_digger
     - name: Tests
       run: |
-        pytest -v
+        python -m pytest -v
