--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest dict_digger
+        pip install pytest dict_digger requests json
     - name: Tests
       run: |
         python -m pytest -v
