--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,4 +5,4 @@ include README.md
 recursive-include tests *
 recursive-exclude * __pycache__
 
-recursive-include *.json
+recursive-include config *.json
